Made email input an "email" type

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -22,7 +22,7 @@
                 <script type="text/ng-template" id="auth/navbar/signin">
                     <form ng-controller="AuthController" name="authForm" class="signin-form navbar-form">
                         <div class="form-group">
-                            <input ng-model="user.email" class="email form-control" type="text"
+                            <input ng-model="user.email" class="email form-control" type="email"
                                    placeholder="Email" required="required" />
 
                             <input ng-model="user.password" class="password form-control" type="password"
