--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+
     <title>Todo Demo</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
